# CinematicFXPlugin

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_MACOS.md  BUILD_SUMMARY.md  CLIENT_DELIVERY_SUMMARY.txt  CLIENT_EMAIL_TEMPLATE.txt  CMakeLists.txt  CMakeLists_Standalone.txt  DEPLOYMENT_CHECKLIST.md  FEATURE_COMPLETENESS.md  FIXES_APPLIED.md  HOW_TO_DELIVER_TO_CLIENT.md  IMPLEMENTATION_COMPLETE.md  PREMIERE_PRO_ISSUE.md  PRODUCTION_OPTIMIZATIONS_REPORT.md  PRODUCTION_UPGRADE_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  build.ps1  build_plugin.ps1  build_plugin_mac.sh  build_standalone.ps1  install_cuda.ps1  install_mac.sh  test_cuda.cpp  test_cuda.ps1
CLIENT_DELIVERY_2025-12-19_1630/: CLIENT_EMAIL.txt  INSTALL_NOW_Premiere.bat  README_INSTALLATION.txt  TECHNICAL_SPECS.txt
CLIENT_DELIVERY_TESTE3/: README_TESTE3.txt
docs/: BUILD.md  FILE_TREE.md  TECHNICAL_SPEC.md
include/: CinematicFX.h  EffectParameters.h  GPUInterface.h
installer/: CRITICAL_FIXES.txt  INSTALL_INSTRUCTIONS.txt  Install_AfterEffects.bat  Install_Premiere.bat  MAXIMUM_OPTIMIZATION_README.txt  PRODUCTION_RELEASE_NOTES.txt  RELEASE_MODE_FIX.txt  START_HERE.txt
resources/: CinematicFX.def  CinematicFX.rc  Info.plist  PiPL.rc
src/core/: PluginMain.cpp  PluginMain_fixed.cpp  PluginMain_new.cpp  RenderPipeline.cpp  RenderPipeline.h
src/effects/: BloomEffect.h  EffectBase.h  GlowEffect.h
src/gpu/: CPUFallback.cpp  CPUFallback.h  CUDABackend.cpp  CUDABackend.h  GPUBackend.h  GPUContext.cpp  MetalBackend.h  MetalBackend.mm  TextureManager.cpp
src/kernels/cuda/: bloom_kernel.cu  chromatic_aberration_kernel.cu  glow_kernel.cu  grain_kernel.cu  halation_kernel.cu
src/kernels/metal/: bloom_shader.metal
src/resources/: PiPL.r
src/utils/: ColorConversion.cpp  ColorConversion.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  PerformanceTimer.h
